--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,41 +1,72 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database Service
+  ########################################
+  #         SHARED DATABASE              #
+  ########################################
+
+  # A single PostgreSQL Database for the entire application
   db:
     image: postgres:15
-    container_name: taskpilot-postgres-db
+    container_name: taskpilot-shared-db
     environment:
-      POSTGRES_DB: task-pilot-db
+      # This is the single database that both services will write their tables to.
+      POSTGRES_DB: taskpilot_db
       POSTGRES_USER: taskpilot_user
       POSTGRES_PASSWORD: taskpilot_password
     ports:
+      # Maps host port 5432 to container port 5432
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      # A single volume to persist all application data
+      - taskpilot-db-data:/var/lib/postgresql/data
     restart: always
 
-  # User-Service Application
+  ########################################
+  #         APPLICATION SERVICES         #
+  ########################################
+
+  # User Service Application
   user-service:
     build:
-      context: ./user-service  # Path to the user-service directory
+      context: ./user-service
       dockerfile: Dockerfile
     container_name: taskpilot-user-service
     ports:
       - "8081:8081"
     environment:
-      # This overrides the localhost in application.properties
-      # 'db' is the service name of our postgres container
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/task-pilot-db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/taskpilot_db
       SPRING_DATASOURCE_USERNAME: taskpilot_user
       SPRING_DATASOURCE_PASSWORD: taskpilot_password
-      # It's good practice to set the JWT secret here
       JWT_SECRET: "acaa83cc6d82e94a33827f9cbe699d8ff71d3bfbf8e4d7541039afb42ebd311e68726669249bc6d033d3f9536143b79aa071910cb94afa49319acf4268120cde"
-      JWT_EXPIRATION_MS: 86400000
     depends_on:
       - db
     restart: on-failure
 
+  # TodoList Service Application
+  todolist-service:
+    build:
+      context: ./todolist-service
+      dockerfile: Dockerfile
+    container_name: taskpilot-todolist-service
+    ports:
+      - "8082:8082"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/taskpilot_db
+      SPRING_DATASOURCE_USERNAME: taskpilot_user
+      SPRING_DATASOURCE_PASSWORD: taskpilot_password
+      JWT_SECRET: "acaa83cc6d82e94a33827f9cbe699d8ff71d3bfbf8e4d7541039afb42ebd311e68726669249bc6d033d3f9536143b79aa071910cb94afa49319acf4268120cde"
+      GEMINI_API_KEY: ${GEMINI_API_KEY}
+      GEMINI_PROJECT_ID: ${GEMINI_PROJECT_ID}
+    depends_on:
+      - db # Depends on the single 'db' service
+      - user-service
+    restart: on-failure
+
+########################################
+#         VOLUMES                      #
+########################################
+
+# Defines the single named volume used for data persistence
 volumes:
-  # This named volume will persist the database data
-  postgres-data:
+  taskpilot-db-data:
